tests/baselines/reference/contextualTypeAny.errors.txt
tests/cases/compiler/contextualTypeAny.ts(3,5): error TS2322: Type '{ p: 文字; q: 任意; }' is not assignable to type '{ [s: 文字]: 数字; }'.
  Property 'p' is incompatible with index signature.
    Type '文字' is not assignable to type '数字'.


==== tests/cases/compiler/contextualTypeAny.ts (1 errors) ====
    var x: any;
    
    var obj: { [s: string]: number } = { p: "", q: x };
        ~~~
!!! error TS2322: Type '{ p: 文字; q: 任意; }' is not assignable to type '{ [s: 文字]: 数字; }'.
!!! error TS2322:   Property 'p' is incompatible with index signature.
!!! error TS2322:     Type '文字' is not assignable to type '数字'.
    
    var arr: number[] = ["", x];